--- a/SpringBoot/src/main/resources/application.yml
+++ b/SpringBoot/src/main/resources/application.yml
@@ -8,7 +8,18 @@ jdbc:
 spring:
   profiles:
     active: one,two
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/springboot
+    username: root
+    password: root
 
 #tomcat 端口
 server:
   port: 80
+
+#日志记录级别
+logging:
+  level:
+    com.mic: debug
+    org.springframework: info
