--- a/SpringBoot/src/main/resources/application.yml
+++ b/SpringBoot/src/main/resources/application.yml
@@ -13,13 +13,24 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/springboot
     username: root
     password: root
+  redis:
+    host: localhost
+    port: 6379
 
 #tomcat 端口
 server:
-  port: 80
+  port: 8080
 
 #日志记录级别
 logging:
   level:
     com.mic: debug
     org.springframework: info
+
+mybatis:
+  # 实体类别名包路径
+  type-aliases-package: com.mic.boot.pojo
+  # 映射文件路径
+  # mapper-locations: classpath:mappers/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
