Eureka server 高可用配置

--- a/FimicsSpringCloud/SpringCloudParent/pom.xml
+++ b/FimicsSpringCloud/SpringCloudParent/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>../ChildConsumer</module>
         <module>../ChildUserService</module>
+        <module>../EurekaServer</module>
     </modules>
 
     <parent>
