--- a/FimicsSpringCloud/ChildUserService/src/main/resources/application.yml
+++ b/FimicsSpringCloud/ChildUserService/src/main/resources/application.yml
@@ -3,11 +3,18 @@ server:
 
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/springcloud
     username: root
     password: root
-
+  application:
+    name: user-service
 
 mybatis:
   type-aliases-package: com.mic.user.pojo
+
+eureka:
+  client:
+    service-url:
+      #如果基本一个崩溃了，另一个地址还能使用
+      defaultZone: http://127.0.0.1:10086/eureka,http://127.0.0.1:10087/eureka
