--- a/FimicsSpringCloud/ChildUserService/src/main/resources/application.yml
+++ b/FimicsSpringCloud/ChildUserService/src/main/resources/application.yml
@@ -18,3 +18,12 @@ eureka:
     service-url:
       #如果基本一个崩溃了，另一个地址还能使用
       defaultZone: http://127.0.0.1:10086/eureka,http://127.0.0.1:10087/eureka
+    instance:
+      # 更倾向使用ip地址，而不是host名
+      prefer-ip-address: true
+      # ip地址
+      ip-address: 127.0.0.1
+      # 续约(心跳)间隔，默认30秒
+      lease-renewal-interval-in-seconds: 5
+      # 服务失效时间，默认90秒
+      lease-expiration-duration-in-seconds: 5
