Feign 自动根据请求参数拼接http请淾地址

--- a/FimicsSpringCloud/ChildConsumer/src/main/resources/application.yml
+++ b/FimicsSpringCloud/ChildConsumer/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   application:
     name: consumer-demo
@@ -17,6 +16,6 @@ hystrix:
           thread:
             timeoutInMilliseconds: 2000
       circuitBreaker:
-        errorThresholdPercentage: 50 # 触发熔断错误比例阈值，默认值50%
+        errorThresholdPercentage: 50 # 触发熔断错误比例阈值，默认值50%(失败比例)
         sleepWindowInMilliseconds: 10000 # 熔断后休眠时长，默认值5秒
         requestVolumeThreshold: 10 # 熔断触发最小请求次数，默认值是20
