Gateway 自宝局部过滤器

--- a/FimicsSpringCloud/SpringCloudParent/pom.xml
+++ b/FimicsSpringCloud/SpringCloudParent/pom.xml
@@ -13,6 +13,7 @@
         <module>../ChildConsumer</module>
         <module>../ChildUserService</module>
         <module>../EurekaServer</module>
+        <module>../ChileGateway</module>
     </modules>
 
     <parent>
