--- a/FimicsSpringCloud/SpringCloudParent/pom.xml
+++ b/FimicsSpringCloud/SpringCloudParent/pom.xml
@@ -14,6 +14,8 @@
         <module>../ChildUserService</module>
         <module>../EurekaServer</module>
         <module>../ChileGateway</module>
+        <module>../ChildServerConfig</module>
+        <module>../ChildConfigServer</module>
     </modules>
 
     <parent>
