--- a/FimicsSpringCloud/ChildConfigServer/src/main/resources/application.yml
+++ b/FimicsSpringCloud/ChildConfigServer/src/main/resources/application.yml
@@ -8,9 +8,21 @@ spring:
       server:
         git:
           uri: https://gitee.com/mengmofang/spring-cloud-config.git
-
+  # 配置rabbitmq信息；如果是都与默认值一致则不需要配置
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 # 把 config-server 当作一个服务注册到 eureka
 eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:10086/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        # 暴露触发消息总线的地址
+        include: bus-refresh
