--- a/FimicsSpringCloud/ChildUserService/src/main/resources/bootstrap.yml
+++ b/FimicsSpringCloud/ChildUserService/src/main/resources/bootstrap.yml
@@ -13,6 +13,11 @@ spring:
         # 配置中心服务名
         service-id: config-server
   # 配置rabbitmq信息；如果是都与默认值一致则不需要配置
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 eureka:
   client:
