--- a/fimicsnodejs/package.json
+++ b/fimicsnodejs/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "css-loader": "^6.4.0",
+    "style-loader": "^3.3.1"
+  }
 }
