--- a/FImicsMaven/ChildWeb/src/main/webapp/WEB-INF/web.xml
+++ b/FImicsMaven/ChildWeb/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   <!--指定Spring配置文件位置-->
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath*:applicationContext-service.xml</param-value>
+    <param-value>classpath*:applicationContext-*.xml</param-value>
   </context-param>
 
   <!--配置Spring框架启动时使用的监听器-->
